BIG UPDATE: updated gradle; updated README.md; updated plugin.yml (the author field, auto version updating, bigger indentation); implemented an option to choose between storing block logs in memory or on disk; plenty other small code changes

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ dependencies {
     compileOnly "com.canyonmodded:canyon-api:1.7.3"
 }
 
-archivesBaseName = "MyPlugin"
+def pluginVersion = "1.2.0"
+
+base.archivesName = "my-plugin-" + pluginVersion
 
 def javaVersion = JavaVersion.VERSION_1_8
 
@@ -22,3 +24,9 @@ java {
 }
 
 jar.from("LICENSE.txt")
+
+processResources {
+    filesMatching("plugin.yml") {
+        expand "version": pluginVersion
+    }
+}
