--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,19 +1,19 @@
 name: MyPlugin
-version: 1.1.0
+version: ${version}
 description: Doing various things on the server.
-author: Blay
+author: Wojciech Paruch <teamaster69@proton.me>
 
-main: com.blay.myplugin.MyPlugin
+main: me.teamaster.myplugin.MyPlugin
 commands:
-  blocklog:
-    aliases: [blocklogger, inspect]
-    description: Inspect the block logs.
-  players:
-    aliases: [list, kto]
-    description: Check who's currently online.
-  myplugin-reload:
-    aliases: reload-myplugin
-    description: Reload the configuration of MyPlugin.
-  info:
-    aliases: rules
-    description: Get some information about the server.
+    blocklog:
+        aliases: [blocklogger, inspect]
+        description: Inspect the block logs.
+    players:
+        aliases: [list, kto]
+        description: Check who's currently online.
+    myplugin-reload:
+        aliases: reload-myplugin
+        description: Reload the configuration of MyPlugin.
+    info:
+        aliases: rules
+        description: Get some information about the server.
