--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "java"
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 repositories {
@@ -29,4 +30,21 @@ processResources {
     filesMatching("plugin.yml") {
         expand "version": pluginVersion
     }
+}
+
+modrinth {
+    token = System.getenv("MINOTAUR_PAT")
+    syncBodyFrom = rootProject.file("modrinth/readme.md").text
+    uploadFile = jar
+    projectId = "my-plugin"
+    changelog = rootProject.file("modrinth/changelog.md").text
+    versionName = "My Plugin " + pluginVersion
+    versionNumber = pluginVersion
+    gameVersions = ["b1.7.3"]
+    loaders = ["bukkit"]
+}
+
+task modrinthUpload {
+    dependsOn "modrinth"
+    dependsOn "modrinthSyncBody"
 }
